RESOLVED FIXED152781
[mips] Fix bug in or32() implementation
https://bugs.webkit.org/show_bug.cgi?id=152781
Summary [mips] Fix bug in or32() implementation
Julien Brianceau
Reported 2016-01-06 02:31:14 PST
In mips macro assembler, the or32(TrustedImm32, RegisterID, RegisterID) implementation is buggy when used with a null immediate
Attachments
Fix or32() mips implementation in macro assembler (1.25 KB, patch)
2016-01-06 02:41 PST, Julien Brianceau
msaboff: review+
Julien Brianceau
Comment 1 2016-01-06 02:41:03 PST
Created attachment 268363 [details] Fix or32() mips implementation in macro assembler Note: already contributed in qtwekbit http://code.qt.io/cgit/qt/qtwebkit.git/commit/?id=0546c8656a3728bf4375da39027e096beba4f111
Michael Saboff
Comment 2 2016-01-06 09:47:19 PST
Comment on attachment 268363 [details] Fix or32() mips implementation in macro assembler r=me
Julien Brianceau
Comment 3 2016-01-06 12:58:13 PST
Note You need to log in before you can comment on or make changes to this bug.