[mips] Fix or32 implementation in macro assembler https://bugs.webkit.org/show_bug.cgi?id=152781

Reviewed by Michael Saboff.

* assembler/MacroAssemblerMIPS.h:
(JSC::MacroAssemblerMIPS::or32):



Canonical link: https://commits.webkit.org/170869@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194640 268f45cc-cd09-0410-ab3c-d52691b4dbfc